objects/API_Request__c.object
<CustomObject>
    <description>Custom Object for storing API Requests and Responses</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>API Requests</relationshipLabel>
        <relationshipName>API_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Method__c</fullName>
        <label>Request Method</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Timestamp__c</fullName>
        <label>Request Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Status_Code__c</fullName>
        <label>Response Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Timestamp__c</fullName>
        <label>Response Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>API Request</label>
    <nameField>
        <label>APIRequestID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>